--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "art": "^0.10.1",
     "expo": "26.0.0",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
-    "react-navigation": "^1.5.9"
+    "react-native-scrolling-menu": "^0.1.1",
+    "react-navigation": "^1.5.9",
+    "top-bar-nav": "^1.0.15",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "jest-expo": "^26.0.0"
