--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
+    "react-native-modal": "^5.4.0",
     "react-native-scrolling-menu": "^0.1.1",
     "react-navigation": "^1.5.9",
     "top-bar-nav": "^1.0.15",
