--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "26.0.0",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react-native-customized-image-picker": "0.0.47",
     "react-native-elements": "^0.19.1",
     "react-native-modal": "^5.4.0",
     "react-native-scrolling-menu": "^0.1.1",
