--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@expo/vector-icons": "^6.3.1",
     "art": "^0.10.1",
     "expo": "26.0.0",
     "react": "16.3.0-alpha.1",
