--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-modal": "^5.4.0",
     "react-native-scrolling-menu": "^0.1.1",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.9",
     "top-bar-nav": "^1.0.15",
     "uuid": "^3.2.1"
