updating version of react/expo

--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^6.3.1",
     "art": "^0.10.1",
-    "expo": "26.0.0",
-    "react": "16.3.0-alpha.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "expo": "^27.0.1",
+    "react": "^16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-customized-image-picker": "0.0.47",
     "react-native-device-info": "^0.21.5",
     "react-native-elements": "^0.19.1",
     "react-native-modal": "^5.4.0",
     "react-native-scrolling-menu": "^0.1.1",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^1.5.9",
+    "react-navigation": "^1.5.11",
     "top-bar-nav": "^1.0.15",
     "uuid": "^3.2.1"
   },
